backends/x11/standalone: only use sRGB configurations with depth 24

Credit goes to Mario Kleiner, who bisected this issue.

BUG: 423014


(cherry picked from commit e6fb6ff5d3b3c60b0f50a00ed8b7e351e3aaf9a1)